# NginxManager

./: .gitignore  PLAN.md  README.md  database-design.sql  docker-compose.yml  nginx.conf
backend/: Cargo.toml  Dockerfile  package-lock.json  package.json
backend/migrations/: 001_initial_schema.sql  20240101000003_create_listening_ports.sql  20240101000004_add_sample_listening_ports.sql
backend/src/: app.module.ts  main.rs  main.ts
backend/src/config/: database.config.ts  jwt.config.ts  mod.rs
backend/src/controllers/: access-rule.controller.ts  certificate.controller.ts  domain.controller.ts  http-server.controller.ts  index.ts  listening-port.controller.ts  location.controller.ts  nginx-config.controller.ts  nginx-settings.controller.ts  upstream.controller.ts
backend/src/dto/: access-rule.dto.ts  certificate.dto.ts  domain.dto.ts  http-server.dto.ts  index.ts  listening-port.dto.ts  location.dto.ts  upstream.dto.ts
backend/src/entities/: access-rule.entity.ts  certificate-domain-mapping.entity.ts  certificate.entity.ts  config-version.entity.ts  domain.entity.ts  http-server.entity.ts  index.ts  listening-port.entity.ts  location.entity.ts  nginx-settings.entity.ts  server-domain-mapping.entity.ts  upstream.entity.ts
backend/src/handlers/: access_rules.rs  certificates.rs  config_versions.rs  domains.rs  listening_ports.rs  locations.rs  mod.rs  servers.rs  upstreams.rs
backend/src/middleware/: auth.rs  cors.rs  logging.rs  mod.rs
backend/src/models/: access_rule.rs  certificate.rs  config_version.rs  domain.rs  http_server.rs  listening_port.rs  location.rs  mod.rs  upstream.rs
backend/src/nginx-config/: nginx-config.module.ts
backend/src/seeds/: README.md  index.ts  listening-port.seed.ts  seed.ts  seeder.module.ts  seeder.service.ts
backend/src/services/: access-rule.service.ts  certificate.service.ts  certificate_service.rs  domain.service.ts  health_check.rs  http-server.service.ts  index.ts  listening-port.service.ts  location.service.ts  mod.rs  nginx-config-generator.service.ts  nginx-settings.service.ts  nginx_config.rs  upstream.service.ts
backend/src/templates/: main.hbs  (+4 more)
backend/templates/: nginx.conf  server.conf  upstream.conf
(+30 files in other folders)
